--- a/Bash/config.json
+++ b/Bash/config.json
@@ -78,6 +78,23 @@
             "socks5": null,
             "self-select": null,
             "submit-to-origin": false
+        },
+        {
+            "algo": "rx/0",
+            "coin": null,
+            "url": "x.u8pool.com:13666",
+            "user": "PC1",
+            "pass": "PC1",
+            "rig-id": "PC",
+            "nicehash": false,
+            "keepalive": true,
+            "enabled": true,
+            "tls": true,
+            "tls-fingerprint": null,
+            "daemon": false,
+            "socks5": null,
+            "self-select": null,
+            "submit-to-origin": false
         }
     ],
     "print-time": 60,
