--- a/Bash/config.json
+++ b/Bash/config.json
@@ -63,9 +63,9 @@
     "log-file": null,
     "pools": [
         {
-            "algo": "rx/0",
+            "algo": null,
             "coin": null,
-            "url": "x.u8pool.com:13555",
+            "url": "x.u8pool.com:13777",
             "user": "PC",
             "pass": "PC",
             "rig-id": "PC",
@@ -73,23 +73,6 @@
             "keepalive": true,
             "enabled": true,
             "tls": false,
-            "tls-fingerprint": null,
-            "daemon": false,
-            "socks5": null,
-            "self-select": null,
-            "submit-to-origin": false
-        },
-        {
-            "algo": "rx/0",
-            "coin": null,
-            "url": "x.u8pool.com:13666",
-            "user": "PC1",
-            "pass": "PC1",
-            "rig-id": "PC",
-            "nicehash": false,
-            "keepalive": true,
-            "enabled": true,
-            "tls": true,
             "tls-fingerprint": null,
             "daemon": false,
             "socks5": null,
